working on small bugs.

--- a/src/App.css
+++ b/src/App.css
@@ -20,10 +20,17 @@ body {
 .static-logo {
   height: 150px;
   cursor: pointer;
+    position: fixed;
+    margin-left: auto;
+    margin-right: auto;
+    top: 20px;
+    left: 0;
+    right: 0;
+    z-index: 99;
 }
 
 .menu {
-  position: absolute;
+  position: fixed;
   margin-left: auto;
   margin-right: auto;
   top: 145px;
@@ -33,6 +40,7 @@ body {
   font-size: 35px;
   text-shadow: 0 0 5px rgba(0, 0, 0, 0.42);
   cursor: pointer;
+    z-index: 99;
 }
 
 .menu-hidden {
@@ -40,26 +48,11 @@ body {
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 250px;
-  max-height: 500px;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+ height: 150px;
+    padding: 20px;
   color: white;
 }
 
 
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
